--- a/views/client/main.html
+++ b/views/client/main.html
@@ -37,65 +37,67 @@
         </div>
         <div class='search-bar-list'>
 
-          <!-- 예약 가능 객실 -->
-          <div class="search-bar-item room">
-            <div class="search-bar-item-container">
-              <span class="item-header">예약 가능 객실</span>
-              <span class="item-name">
-                <img src="../../public/client/images/01_main/main_bar_search.png" class="search-bar-btn search">
-                검색
-              </span>
-            </div>
-
-          </div>
-
-          <!-- 인원수 -->
-          <div class="search-bar-item number">
-            <img src="../../public/client/images/01_main/main_bar_03.png" class="search-bar-btn minus">
-            <div class="search-bar-item-container">
-              <span class="item-header">인원수 </span>
-              <span class="item-name">2</span>
-            </div>
-            <img src="../../public/client/images/01_main/main_bar_04.png" class="search-bar-btn plus">
-          </div>
-
-          <!-- 인원수 -->
-          <div class="a">
-            <div class="item-header"> <div style="margin:auto;"><span>title</span></div> </div>
-            <div class="b">
-              <img src="../../public/client/images/01_main/main_bar_03.png" class="search-bar-btn minus">
-              <div style="margin:auto;" >
-                <span class="c">인원수 </span>
-                <span class="c">2</span>
+          <div class="item-wrapper" style="width:150px;">
+            <div class="item-container">
+              <div class="item-header">
+                <div class="header-wrapper" style="align-items:center;">
+                  <span> 예약 가능 객실 </span>
+                  <span class="item-title">
+                    <img src="../../public/client/images/01_main/main_bar_search.png" class="item-image">
+                    검색
+                  </span>
+                </div>
               </div>
-              <img src="../../public/client/images/01_main/main_bar_04.png" class="search-bar-btn plus">
-
             </div>
-
           </div>
 
-          <!-- 예약 날짜 -->
-          <div class="search-bar-item date">
-            <div class="search-bar-item-container">
-              <span class="item-header">예약 날짜</span>
-              <div>
-                <span class="item-date">2018-09-10 ~ </span>
-                <span class="item-date"> 2018-09-10</span>
+          <div class="item-wrapper">
+            <div class="item-container">
+              <div class="item-body">
+                <img src="../../public/client/images/01_main/main_bar_03.png" class="item-image">
               </div>
-
+              <div class="item-header">
+                <div class="header-wrapper" style="align-items:center;">
+                  <span> 인원수 </span>
+                  <span class="item-title"> 2 </span>
+                </div>
+              </div>
+              <div class="item-body">
+                <img src="../../public/client/images/01_main/main_bar_04.png" class="item-image">
+              </div>
             </div>
-            <img src="../../public/client/images/01_main/main_bar_02.png" class="search-bar-btn calendar">
           </div>
 
+          <div class="item-wrapper">
+            <div class="item-container">
+              <div class="item-header">
+                <div class="header-wrapper">
+                  <span> 예약 날짜 </span>
+                  <span> 2018.09.20 ~</span>
+                  <span >2018.09.20</span>
+                </div>
+              </div>
+              <div class="item-body">
+                <img src="../../public/client/images/01_main/main_bar_02.png" class="item-image">
+              </div>
+            </div>
+          </div>
+
+          <div class="item-wrapper">
+            <div class="item-container">
+              <div class="item-header">
+                <div class="header-wrapper">
+                  <span> HOTEL BRAND </span>
+                  <span class="item-title">호텔 선택</span>
+                </div>
+              </div>
+              <div class="item-body">
+                <img src="../../public/client/images/01_main/main_bar_01.png" class="item-image">
+              </div>
+            </div>
+          </div>
 
           <!-- 호텔 선택 -->
-          <div class="search-bar-item hotel">
-            <div class="search-bar-item-container">
-              <span class="item-header">HOTEL BRAND</span>
-              <span class="item-name">호텔 선택</span>
-            </div>
-            <img src="../../public/client/images/01_main/main_bar_01.png" class="search-bar-btn arrow-down">
-          </div>
 
         </div>
       </div>
