--- a/views/client/main.html
+++ b/views/client/main.html
@@ -37,67 +37,50 @@
         </div>
         <div class='search-bar-list'>
 
-          <div class="item-wrapper" style="width:150px;">
-            <div class="item-container">
-              <div class="item-header">
-                <div class="header-wrapper" style="align-items:center;">
-                  <span> 예약 가능 객실 </span>
-                  <span class="item-title">
-                    <img src="../../public/client/images/01_main/main_bar_search.png" class="item-image">
-                    검색
-                  </span>
-                </div>
-              </div>
+          <!-- 검색 -->
+          <div class='section search'>
+            <div class='title'>
+              <span> 예약 가능 객실 </span>
+            </div>
+            <div class='content'>
+              <img src="../../public/client/images/01_main/main_bar_search.png" class="btn-image">
+              <span> 검색 </span>
             </div>
           </div>
 
-          <div class="item-wrapper">
-            <div class="item-container">
-              <div class="item-body">
-                <img src="../../public/client/images/01_main/main_bar_03.png" class="item-image">
-              </div>
-              <div class="item-header">
-                <div class="header-wrapper" style="align-items:center;">
-                  <span> 인원수 </span>
-                  <span class="item-title"> 2 </span>
-                </div>
-              </div>
-              <div class="item-body">
-                <img src="../../public/client/images/01_main/main_bar_04.png" class="item-image">
-              </div>
+          <!-- 인원수 -->
+          <div class='section count'>
+            <div class='title'>
+              <span> 인원수 </span>
+            </div>
+            <div class='content'>
+              <img src="../../public/client/images/01_main/main_bar_03.png" style="margin-right:20px;" class="btn-image">
+              <input class="input-search" type="number" name="" value="1"></input>
+              <img src="../../public/client/images/01_main/main_bar_04.png" style="margin-left:20px;" class="btn-image">
             </div>
           </div>
 
-          <div class="item-wrapper">
-            <div class="item-container">
-              <div class="item-header">
-                <div class="header-wrapper">
-                  <span> 예약 날짜 </span>
-                  <span> 2018.09.20 ~</span>
-                  <span >2018.09.20</span>
-                </div>
-              </div>
-              <div class="item-body">
-                <img src="../../public/client/images/01_main/main_bar_02.png" class="item-image">
-              </div>
+          <!-- 인원수 -->
+          <div class='section count'>
+            <div class='title'>
+              <span> 예약 날짜 </span>
             </div>
-          </div>
-
-          <div class="item-wrapper">
-            <div class="item-container">
-              <div class="item-header">
-                <div class="header-wrapper">
-                  <span> HOTEL BRAND </span>
-                  <span class="item-title">호텔 선택</span>
-                </div>
-              </div>
-              <div class="item-body">
-                <img src="../../public/client/images/01_main/main_bar_01.png" class="item-image">
-              </div>
+            <div class='content' style="margin-left:30px;">
+              <span style="font-size:1rem;display:inline-block;"> 2018-09-20 ~ </br> 2018-09-21 </span>
+              <img src="../../public/client/images/01_main/main_bar_02.png" style="margin-bottom:40px;" class="btn-image">
             </div>
           </div>
 
           <!-- 호텔 선택 -->
+          <div class='section hotel'>
+            <div class='title'>
+              <span> HOTEL BRAND </span>
+            </div>
+            <div class='content'>
+              <span style="display:inline-block;width:130px;margin-left:20px;height:30px;"> 호텔 선택호텔 선택호텔 선택호텔 선택 </span>
+              <img src="../../public/client/images/01_main/main_bar_01.png" class="btn-image">
+            </div>
+          </div>
 
         </div>
       </div>
