--- a/public/client/css/main.css
+++ b/public/client/css/main.css
@@ -80,92 +80,70 @@ html {
   display: flex;
   flex: 1;
   flex-direction: row-reverse;
-  /* justify-content: space-around; */
-  /* margin: auto; */
 }
 
-.search-bar-list .search-bar-item {
-  color: #ffffff;
-  border-right: 1px solid gray;
-  border-left: 1px solid gray;
-  position: relative;
-  height: 100%;
-  text-align: center;
+.search-bar-list .section {
+  border-left: 1px solid white;
+  border-right: 1px solid white;
+}
+
+.section {
   display: flex;
-}
-
-.search-bar-list .item-wrapper {
-  /* flex-direction: column; */
-  width: 200px;
-  text-align: center;
-  display: flex;
-  border-left: 1px solid gray;
-  border-right: 1px solid gray;
-}
-
-.search-bar-list .item-wrapper .item-container {
-  display: flex;
-  margin: 0 auto;
-  flex: 1;
-  align-items: center;
-}
-
-.search-bar-list .item-wrapper .item-header{
-  font-size: 0.75rem;
-  color: #cecbcb;
-  flex: 2;
-}
-
-.search-bar-list .item-wrapper .item-header .header-wrapper{
-  margin: 0 auto;
-  display: flex;
-  align-items: flex-end;
-  flex: 1;
   flex-direction: column;
 }
 
-.search-bar-list  .item-wrapper .item-body{
-  flex: 1;
-  /* margin: auto; */
+.section.search {
+  width: 150px;
 }
 
-.search-bar-list  .item-wrapper .item-body .body-wrapper{
-  margin:0 auto;
-  display: flex;
-  align-items: flex-end;
+.section.count {
+  width: 210px;
 }
 
-.search-bar-list  .item-wrapper .item-title {
+.section.date {
+  width: 200px;
+}
+
+.section.hotel {
+  width: 220px;
+}
+
+.search-bar-list .section .title {
   color: white;
-  font-size: 1.2rem;
-  line-height: 2rem;
+  text-align: center;
+  margin-top: 10px;
+  font-size: 0.75rem;
 }
 
-.search-bar-list  .item-wrapper .item-image {
+.search-bar-list .section .content {
+  flex: 1;
+  padding: 5px;
+  color: white;
+  text-align: center;
+  font-size: 1.4rem;
+}
+
+.search-bar-list .section .content .input-search {
+  text-align: center;
+  vertical-align: middle;
+  width: 60px;
+  font-size: 1.3rem;
+  background : transparent;
+  color: white;
+  border: 0;
+}
+
+.search-bar-list .section .content .btn-image {
+  vertical-align: middle;
   cursor: pointer;
 }
 
-.search-bar-list  .item-wrapper .item-content {
-  color: white;
-  margin: auto;
-  margin-top: 0;
+input[type=number]:hover, input[type=number]:focus {
+  outline: none;
 }
 
-
-.a {
-  flex-direction: column;
-  width: 200px;
-  text-align: center;
-  display: flex;
-}
-
-.b {
-  flex: 1;
-  display: flex;
-  flex-direction: row;
-}
-
-.c {
-  color: white;
-  margin: auto;
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
 }
