--- a/public/client/css/main.css
+++ b/public/client/css/main.css
@@ -83,7 +83,7 @@ html {
 }
 
 .search-bar-list .section {
-  border-left: 1px solid white;
+  /* border-left: 1px solid white; */
   border-right: 1px solid white;
 }
 
@@ -108,6 +108,29 @@ html {
   width: 220px;
 }
 
+.hotel-select {
+  background: black;
+  color: white;
+  text-align: center;
+  margin-top: 5px;
+  display: none;
+}
+
+.hotel-select span {
+  display: block;
+  color: white;
+  padding: 10px 0;
+  cursor: pointer;
+  border: 1px solid transparent;
+  white-space: nowrap;overflow: hidden;text-overflow: ellipsis;
+}
+
+.hotel-select span:hover {
+  background-color: white;
+  color: black;
+  border: 1px solid black;
+}
+
 .search-bar-list .section .title {
   color: white;
   text-align: center;
@@ -116,7 +139,7 @@ html {
 }
 
 .search-bar-list .section .content {
-  flex: 1;
+  /* flex: 1; */
   padding: 5px;
   color: white;
   text-align: center;
@@ -146,4 +169,218 @@ input[type=number]::-webkit-inner-spin-button,
 input[type=number]::-webkit-outer-spin-button {
   -webkit-appearance: none;
   margin: 0;
+}
+
+/* ///////////////////////////////// */
+
+.main1 {
+  /* height: 600px; */
+  /* height: 600px; */
+  /* display: flex; */
+}
+
+.main1_image {
+  padding-bottom: 700px;
+  background-image: url('../images/main_sample1.jpg');
+  background-position: center 0%;
+  background-repeat: no-repeat;
+  background-size: 100% 700px;
+}
+
+.main1_desc_wrapper {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  display: flex;
+}
+
+.main1_header {
+  width: 450px;
+  /* height: 300px; */
+  margin: auto;
+  margin-top: 200px;
+  margin-left: 350px;
+}
+
+.main1_header span {
+  display: block;
+}
+
+.main1_header .title {
+  color: black;
+  font-size: 2.5rem;
+  font-weight: bold;
+}
+
+.main1_header .sub-title {
+  color: black;
+  font-size: 2rem;
+}
+
+.main1_header .desc {
+  color: black;
+  font-size: 0.9rem;
+  font-weight: bold;
+  margin: 10px 0;
+}
+
+.event-btn {
+  position: absolute;
+  bottom: 35%;
+  padding: 3px 40px;
+  background: black;
+  color : white;
+  left: 350px;
+  cursor: pointer;
+}
+
+.main2 {
+  width: 1080px;
+  margin: auto;
+  display: flex;
+}
+
+.main2 .region-image {
+  flex: 1;
+  padding-bottom: 80px;
+  background-position: center 0%;
+  background-repeat: no-repeat;
+  background-size: 100% 80px;
+}
+
+.main3 {
+  width: 1080px;
+  margin: 50px auto;
+  display: flex;
+  height: 325px;
+}
+
+.main3 .event-info {
+  flex: 1;
+  border: 1px solid gray;
+  display: flex;
+}
+
+.main3 .event-video {
+  flex : 2;
+}
+
+.event-wrapper {
+  margin: 30px 20px;
+  border-top: 1px solid gray;
+  border-bottom: 1px solid gray;
+  display: flex;
+}
+
+.main3-event-btn {
+  width: 50px;
+  text-align: center;
+  padding: 3px 40px;
+  background: black;
+  color : white;
+  cursor: pointer;
+  font-weight: bold;
+}
+
+.event-body {
+  margin: auto;
+  padding-top: 20px;
+  padding-left: 10px;
+
+}
+
+.event-body span {
+  display: block;
+}
+
+.main3-event-title {
+  font-weight: 600;
+  color: black;
+  font-size: 1.5rem;
+  margin-top: 10px;
+}
+
+.main3-event-desc {
+  margin-top: 20px;
+  font-size: 0.7rem;
+  line-height: 1.2rem;
+  color: gray;
+}
+
+.main3-event-more {
+  font-size: 0.8rem;
+  font-weight: bold;
+  text-align: right;
+  padding-top: 30px;
+  cursor: pointer;
+}
+
+.event-video {
+  padding: 5px 20px;
+}
+
+.main4 {
+  width: 1080px;
+  margin: auto;
+}
+
+.middle-sub-logo {
+  padding : 20px 0;
+}
+
+.main4-desc {
+   text-align: center;
+   color: gray;
+   line-height: 1.8rem;
+   padding-bottom: 40px;
+}
+
+.main5, .main6 {
+  width: 1080px;
+  margin: auto;
+  margin-bottom: 50px;
+}
+
+.main5-header {
+  border-bottom: 1px solid gray;
+  margin: 20px 0;
+}
+
+.main5-btn {
+  /* width: 200px; */
+  padding: 2px 15px;
+  background: black;
+  color: white;
+}
+
+.main5-body {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.main5-body .main5-list {
+  width: 24%;
+}
+
+.main5-list-wrapper {
+  padding: 10px;
+}
+
+.main5-list-title {
+  border-bottom: 2px solid black;
+  padding-top: 10px;
+  margin-bottom: 10px;
+  font-size: 1.2rem;
+}
+
+.main5-list-image {
+  height: 220px;
+  display: flex;
+}
+
+.main5-list-address {
+  padding-bottom: 10px;
+  color: gray;
+  font-size: 0.9rem;
 }
