--- a/views/client/main.html
+++ b/views/client/main.html
@@ -134,8 +134,9 @@
               1년에 단 한번뿐인 광안리의 가장 아름다운 밤<br> [광안하운드호텔]의
               오션뷰 그리고 광안대교 전경의 루프탑에서
             </span>
+            <span id="event_btn" class="main1-event-btn"> EVENT </span>
           </div>
-          <span id="event_btn" class="event-btn"> EVENT </span>
+
         </div>
 
       </div>
