--- a/views/client/main.html
+++ b/views/client/main.html
@@ -343,5 +343,108 @@
       </div>
     </div>
 
+
+    <div class="main7">
+      <div class="main5-header">
+        <span class="main5-btn">브랜드 리스트</span>
+      </div>
+
+      <div class="main7-list-wrapper">
+
+          <div class="main7-list">
+              <div class="" style="display:flex;">
+                <img style="margin: 30px auto;" src="../../public/client/images/01_main/main_25.png" alt="">
+              </div>
+
+              <div class="list-desc-wrapper">
+                <div style="text-align:center;"> 하 운 드 호텔 </div>
+                <div class="" style="display:flex; padding-bottom: 10px;">
+                  <img style="margin: auto;" src="../../public/client/images/01_main/main_middle_hotellist.png" alt="">
+                </div>
+                <div class="" style="line-height: 1.5rem;text-align: center;font-size: 0.9rem; padding-top: 10px; border-top: 1px solid black;">
+                  진정한 휴식과 감성적 재충전을 모두 충족시키기 위한 부티크 호텔이다.
+                  라이프 스타일을 중요 시 하는 트랜디한 고객들에게는 이미 필수 호텔로
+                  자리 잡은 [HOUND HOTEL]은 도심속에서 자연의 힐링과 감각적 재 충전을 위한
+                  실용적이면서 편안한 서비스를 제공하기 위한 모든 준비가 되어있다.
+                </div>
+              </div>
+          </div>
+
+          <div class="main7-list">
+              <div class="" style="display:flex;">
+                <img style="margin: 30px auto;" src="../../public/client/images/01_main/main_25.png" alt="">
+              </div>
+
+              <div class="list-desc-wrapper">
+                <div style="text-align:center;"> 하 운 드 호텔 </div>
+                <div class="" style="display:flex; padding-bottom: 10px;">
+                  <img style="margin: auto;" src="../../public/client/images/01_main/main_middle_hotellist.png" alt="">
+                </div>
+                <div class="" style="line-height: 1.5rem;text-align: center;font-size: 0.9rem; padding-top: 10px; border-top: 1px solid black;">
+                  진정한 휴식과 감성적 재충전을 모두 충족시키기 위한 부티크 호텔이다.
+                  라이프 스타일을 중요 시 하는 트랜디한 고객들에게는 이미 필수 호텔로
+                  자리 잡은 [HOUND HOTEL]은 도심속에서 자연의 힐링과 감각적 재 충전을 위한
+                  실용적이면서 편안한 서비스를 제공하기 위한 모든 준비가 되어있다.
+                </div>
+              </div>
+          </div>
+
+          <div class="main7-list">
+              <div class="" style="display:flex;">
+                <img style="margin: 30px auto;" src="../../public/client/images/01_main/main_25.png" alt="">
+              </div>
+
+              <div class="list-desc-wrapper">
+                <div style="text-align:center;"> 하 운 드 호텔 </div>
+                <div class="" style="display:flex; padding-bottom: 10px;">
+                  <img style="margin: auto;" src="../../public/client/images/01_main/main_middle_hotellist.png" alt="">
+                </div>
+                <div class="" style="line-height: 1.5rem;text-align: center;font-size: 0.9rem; padding-top: 10px; border-top: 1px solid black;">
+                  진정한 휴식과 감성적 재충전을 모두 충족시키기 위한 부티크 호텔이다.
+                  라이프 스타일을 중요 시 하는 트랜디한 고객들에게는 이미 필수 호텔로
+                  자리 잡은 [HOUND HOTEL]은 도심속에서 자연의 힐링과 감각적 재 충전을 위한
+                  실용적이면서 편안한 서비스를 제공하기 위한 모든 준비가 되어있다.
+                </div>
+              </div>
+          </div>
+
+
+      </div>
+    </div>
+
+
+    <div class="footer">
+      <div class="footer-wrapper">
+        <div class="" style="display:flex; align-items: center;">
+          <img style="width:100%;" src="../../public/client/images/01_main/main_botton_logo.png" class="">
+        </div>
+        <div class="">
+          <div class="">
+            호텔 프렌차이즈 사업문의
+          </div>
+          <div class="">
+            1877-1318
+            <span> <img src="../../public/client/images/01_main/main_icon_blog.png" class=""> </span>
+            <span> <img src="../../public/client/images/01_main/main_icon_face.png" class=""> </span>
+            <span> <img src="../../public/client/images/01_main/main_icon_insta.png" class=""> </span>
+            <span> <img src="../../public/client/images/01_main/main_icon_map.png" class=""> </span>
+          </div>
+
+          <div class="">
+            대표자: 이승훈 사업장 소재지: 부산광역시 해운대구 우동 1410 트럼프월드마린 D동 상가 2F 208, 209호 사업자 등록번호: 823-86-00673<br>
+            개인정보관리책임자: 이승훈 팩스번호: 051-921-0051 프렌차이즈 사업 문의: 1877-1318 평일 10:00~19:00 (토/일/공휴일휴무)<br>
+            이메일: lsr@wnthotels.com official web: www.wnh.co.kr
+          </div>
+        </div>
+        <div class="">
+          <img style="width:100%;" src="../../public/client/images/01_main/main_tab_number.png" class="">
+          <div class="">
+            서비스 이용약관 보기
+            <br>
+            개인정보 처리 약관 보기
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
