--- a/public/client/css/main.css
+++ b/public/client/css/main.css
@@ -1,176 +1,4 @@
-html {
-  font-family: 'Noto Sans KR', sans-serif;
-}
 
-.gnb-wrapper {
-  /* position: absolute;
-  top:0px;
-  left:0px; */
-  width:100%;
-}
-
-.gnb-container {
-  width: 1080px;
-  padding: 5px 0;
-  margin: 3px auto;
-  display: flex;
-}
-
-.gnb-event {
-  -webkit-flex: 1;  /* Safari 6.1+ */
-  -ms-flex: 1;  /* IE 10 */
-  flex: 1;
-  border-right: 1px solid #555555;
-  padding: 7px 0;
-}
-
-.gnb-event .event-desc {
-  font-weight: bold;
-  font-size: 0.8rem;
-  display: inline-block;
-}
-
-.gnb-event .event-btn {
-  cursor: pointer;
-  float: right;
-  margin-right: 30px;
-}
-
-.gnb-event .event-btn .arrow-down {
-  width: 0.8rem;
-}
-
-.gnb-navbar {
-  -webkit-flex: 0.9;  /* Safari 6.1+ */
-  -ms-flex: 0.9;   /* IE 10 */
-  flex: 0.9;
-  text-align: right;
-  padding: 7px 0;
-}
-
-.gnb-navbar span {
-  display: inline-block;
-  font-weight: bold;
-  font-size: 0.75rem;
-  padding: 0 10px;
-  cursor: pointer;
-}
-
-.search-bar-wrapper {
-  background-color: #000000;
-
-}
-
-.search-bar-logo {
-  display: inline-block;
-}
-
-.search-bar-container {
-  width: 1080px;
-  margin: auto;
-  display: flex;
-  height: 80px;
-}
-
-.nav-logo {
-  padding: 10px;
-}
-
-.search-bar-list {
-  display: flex;
-  flex: 1;
-  flex-direction: row-reverse;
-}
-
-.search-bar-list .section {
-  /* border-left: 1px solid white; */
-  border-right: 1px solid white;
-}
-
-.section {
-  display: flex;
-  flex-direction: column;
-}
-
-.section.search {
-  width: 150px;
-}
-
-.section.count {
-  width: 210px;
-}
-
-.section.date {
-  width: 200px;
-}
-
-.section.hotel {
-  width: 220px;
-}
-
-.hotel-select {
-  background: black;
-  color: white;
-  text-align: center;
-  margin-top: 5px;
-  display: none;
-  z-index: 10;
-}
-
-.hotel-select span {
-  display: block;
-  color: white;
-  padding: 10px 0;
-  cursor: pointer;
-  border: 1px solid transparent;
-  white-space: nowrap;overflow: hidden;text-overflow: ellipsis;
-}
-
-.hotel-select span:hover {
-  background-color: white;
-  color: black;
-  border: 1px solid black;
-}
-
-.search-bar-list .section .title {
-  color: white;
-  text-align: center;
-  margin-top: 10px;
-  font-size: 0.75rem;
-}
-
-.search-bar-list .section .content {
-  /* flex: 1; */
-  padding: 5px;
-  color: white;
-  text-align: center;
-  font-size: 1.4rem;
-}
-
-.search-bar-list .section .content .input-search {
-  text-align: center;
-  vertical-align: middle;
-  width: 60px;
-  font-size: 1.3rem;
-  background : transparent;
-  color: white;
-  border: 0;
-}
-
-.search-bar-list .section .content .btn-image {
-  vertical-align: middle;
-  cursor: pointer;
-}
-
-input[type=number]:hover, input[type=number]:focus {
-  outline: none;
-}
-
-input[type=number]::-webkit-inner-spin-button,
-input[type=number]::-webkit-outer-spin-button {
-  -webkit-appearance: none;
-  margin: 0;
-}
 
 /* ///////////////////////////////// */
 
@@ -182,7 +10,7 @@ input[type=number]::-webkit-outer-spin-button {
 
 .main1_image {
   /* padding-bottom: 700px; */
-  background-image: url('../images/main_sample1.jpg');
+  /* background-image: url('../images/main_sample1.jpg'); */
   background-position: center 0%;
   background-repeat: no-repeat;
   background-size: 100% 700px;
@@ -237,11 +65,11 @@ input[type=number]::-webkit-outer-spin-button {
   position: absolute; */
   /* bottom: 35%; */
   width: 50px;
-  padding: 3px 40px;
+  padding: 0px 40px;
   background: black;
   color: white;
   margin-top: 70px;
-  /* left: 350px; */
+  font-weight: bold;
   cursor: pointer;
 }
 
@@ -269,7 +97,7 @@ input[type=number]::-webkit-outer-spin-button {
 
 .main3 .event-info {
   flex: 1;
-  border: 1px solid gray;
+  border: 1px solid #d3d3d3;
   display: flex;
 }
 
@@ -279,15 +107,15 @@ input[type=number]::-webkit-outer-spin-button {
 
 .event-wrapper {
   margin: 30px 20px;
-  border-top: 1px solid gray;
-  border-bottom: 1px solid gray;
+  border-top: 1px solid #d3d3d3;
+  border-bottom: 1px solid #d3d3d3;
   display: flex;
 }
 
 .main3-event-btn {
   width: 50px;
   text-align: center;
-  padding: 3px 40px;
+  padding: 0px 40px;
   background: black;
   color : white;
   cursor: pointer;
@@ -310,6 +138,8 @@ input[type=number]::-webkit-outer-spin-button {
   color: black;
   font-size: 1.5rem;
   margin-top: 10px;
+  letter-spacing: 2px;
+  line-height: 2rem;
 }
 
 .main3-event-desc {
@@ -321,7 +151,7 @@ input[type=number]::-webkit-outer-spin-button {
 
 .main3-event-more {
   font-size: 0.8rem;
-  font-weight: bold;
+  font-weight: 500;
   text-align: right;
   padding-top: 30px;
   cursor: pointer;
@@ -342,9 +172,10 @@ input[type=number]::-webkit-outer-spin-button {
 
 .main4-desc {
    text-align: center;
-   color: gray;
+   /* color: gray; */
    line-height: 1.8rem;
    padding-bottom: 40px;
+   font-weight: 300;
 }
 
 .main5, .main6, .main7 {
@@ -354,15 +185,16 @@ input[type=number]::-webkit-outer-spin-button {
 }
 
 .main5-header {
-  border-bottom: 1px solid gray;
+  border-bottom: 1px solid #d3d3d3;
   margin: 20px 0;
 }
 
 .main5-btn {
   /* width: 200px; */
-  padding: 2px 15px;
+  padding: 0px 15px;
   background: black;
   color: white;
+  letter-spacing: 2px;
 }
 
 .main5-body {
@@ -380,7 +212,7 @@ input[type=number]::-webkit-outer-spin-button {
 }
 
 .main5-list-title {
-  border-bottom: 2px solid black;
+  border-bottom: 2px solid gray;
   padding-top: 10px;
   margin-bottom: 10px;
   font-size: 1.2rem;
@@ -405,15 +237,38 @@ input[type=number]::-webkit-outer-spin-button {
 
 .main7-list {
   flex: 1;
+  padding: 0 20px;
 }
 
-.footer {
-  width: 1080px;
+.main7-list-image {
+  display:flex;
+}
+
+.main7-list-image .main7-logo {
+  margin: 30px auto;
+}
+
+.main7-list .desc-wrapper .desc-title{
+  text-align:center;
+  padding-bottom:5px;
+}
+
+.main7-list .desc-more-btn-container {
+  display:flex;
+  padding-bottom: 10px;
+}
+
+.main7-list .desc-more-btn-container .desc-more-btn{
   margin: auto;
-  border-top: 1px solid black;
+  cursor: pointer;
 }
 
-.footer-wrapper {
-  padding: 30px 10px;
-  display: flex;
+.main7-list .desc-wrapper .desc-body {
+  padding-left: 20px;
+  padding-right: 20px;
+  line-height: 1.5rem;
+  text-align: center;
+  font-size: 0.8rem;
+  padding-top: 10px;
+  border-top: 1px solid black;
 }
