--- a/views/client/main.html
+++ b/views/client/main.html
@@ -4,10 +4,17 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="../../public/client/vendor/jquery/jquery.min.js"></script>
+    <link rel="stylesheet" href="../../public/client/css/common.css">
     <link rel="stylesheet" href="../../public/client/css/main.css">
-
+    <link rel="stylesheet" href="../../public/client/css/gnb.css">
+    <link rel="stylesheet" href="../../public/client/css/search-bar.css">
+    <link rel="stylesheet" href="../../public/client/css/footer.css">
     <link rel="stylesheet" href="../../public/client/vendor/slick/slick.css">
     <script src="../../public/client/vendor/slick/slick.min.js"></script>
+
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
     <title> 더블유 디자인 호텔 MAIN </title>
   </head>
   <body>
@@ -18,7 +25,7 @@
         <div class="gnb-event">
           <span class="event-desc"> <호텔 최저가 예약 이벤트> 총 예약 결제 금액에서 <font color="red">4%</font> 할인 </span>
           <span>
-            <img src="../../public/client/images/01_main/main_event_search.png" class="event-btn">
+            <img src="../../public/client/images/01_main/main_event_search.png" class="gnb-event-btn">
           </span>
         </div>
         <div class='gnb-navbar'>
@@ -45,7 +52,7 @@
             <div class='title'>
               <span> 예약 가능 객실 </span>
             </div>
-            <div class='content'>
+            <div class='content' style="cursor:pointer;">
               <img src="../../public/client/images/01_main/main_bar_search.png" class="btn-image">
               <span> 검색 </span>
             </div>
@@ -68,14 +75,67 @@
             <div class='title'>
               <span> 예약 날짜 </span>
             </div>
-            <div class='content' style="margin-left:30px;">
-              <span style="font-size:1rem;display:inline-block;"> 2018-09-20 ~ </br> 2018-09-21 </span>
-              <img src="../../public/client/images/01_main/main_bar_02.png" style="margin-bottom:40px;" class="btn-image">
+            <div class='content' style="margin-left:30px;padding-top:0px;">
+              <span style="font-size:1rem;display:inline-block;"> <span id="startDate">2018-09-20 </span> ~ </br> <span id="endDate"> 2018-09-21 </span> </span>
+              <img id="dates" src="../../public/client/images/01_main/main_bar_02.png" style="margin-bottom:40px;" class="btn-image">
+              <script type="text/javascript">
+                var nowTemp = new Date();
+                var now = new Date(nowTemp.getFullYear(), nowTemp.getMonth(), nowTemp.getDate(), 0, 0, 0, 0);
+                var nowTemp2 = new Date(nowTemp.setDate(nowTemp.getDate()+1));
+                var now2 = new Date(nowTemp2.getFullYear(), nowTemp2.getMonth(), nowTemp2.getDate(), 0, 0, 0, 0);
+                $('#dates').daterangepicker({
+                    "showISOWeekNumbers": true,
+                    "timePicker24Hour": true,
+                    "autoApply": true,
+                    "locale": {
+                        "format": "YYYY-MM-DD",
+                        "separator": "  ~  ",
+                        "applyLabel": "Apply",
+                        "cancelLabel": "Cancel",
+                        "fromLabel": "From",
+                        "toLabel": "To",
+                        "customRangeLabel": "Custom",
+                        "weekLabel": "W",
+                        "daysOfWeek": [
+                            "일",
+                            "월",
+                            "화",
+                            "수",
+                            "목",
+                            "금",
+                            "토"
+                        ],
+                        "monthNames": [
+                            "1월",
+                            "2월",
+                            "3월",
+                            "4월",
+                            "5월",
+                            "6월",
+                            "7월",
+                            "8월",
+                            "9월",
+                            "10월",
+                            "11월",
+                            "12월"
+                        ],
+                        "firstDay": 1
+                    },
+                    "startDate":now,
+                    "endDate": now2,
+                    "minDate": now
+                },
+                function(start, end, label) {
+                  console.log("A new date selection was made: " + start.format('YYYY-MM-DD') + ' to ' + end.format('YYYY-MM-DD'));
+                  $("#startDate").text(start.format('YYYY-MM-DD'));
+                  $("#endDate").text(end.format('YYYY-MM-DD'));
+                });
+              </script>
             </div>
           </div>
 
           <!-- 호텔 선택 -->
-          <div class='section hotel' style="border-left: 1px solid white;">
+          <div class='section hotel' style="border-left: 1px solid #888888;">
             <div class='title'>
               <span> HOTEL BRAND </span>
             </div>
@@ -112,6 +172,7 @@
             $("#hotel_list span").click( (e) => {
               console.log($(e.target).text());
               $("#target_hotel").text($(e.target).text());
+              $("#hotel_list").hide();
             });
 
           </script>
@@ -124,7 +185,7 @@
 
 
     <div id="main1" class="main1">
-      <div class="main1_image">
+      <div class="main1_image" style="background-image: url('../../public/client/images/main_sample1.jpg');">
 
         <div class="main1_desc_wrapper">
           <div class="main1_header">
@@ -141,7 +202,7 @@
 
       </div>
 
-      <div class="main1_image">
+      <div class="main1_image" style="background-image: url('../../public/client/images/main_sample1.jpg');">
 
         <div class="main1_desc_wrapper">
           <div class="main1_header">
@@ -157,7 +218,7 @@
 
       </div>
 
-      <div class="main1_image">
+      <div class="main1_image" style="background-image: url('../../public/client/images/main_sample1.jpg');">
 
         <div class="main1_desc_wrapper">
           <div class="main1_header">
@@ -175,7 +236,9 @@
     </div>
 
     <script type="text/javascript">
-      $('#main1').slick({arrows: false});
+      $(function(){
+        $('#main1').slick({arrows: false});
+      });
     </script>
 
 
@@ -352,16 +415,16 @@
       <div class="main7-list-wrapper">
 
           <div class="main7-list">
-              <div class="" style="display:flex;">
-                <img style="margin: 30px auto;" src="../../public/client/images/01_main/main_25.png" alt="">
+              <div class="main7-list-image">
+                <img src="../../public/client/images/01_main/main_25.png" class="main7-logo">
               </div>
 
-              <div class="list-desc-wrapper">
-                <div style="text-align:center;"> 하 운 드 호텔 </div>
-                <div class="" style="display:flex; padding-bottom: 10px;">
-                  <img style="margin: auto;" src="../../public/client/images/01_main/main_middle_hotellist.png" alt="">
+              <div class="desc-wrapper">
+                <div class="desc-title"> 하운드 호텔 </div>
+                <div class="desc-more-btn-container">
+                  <img src="../../public/client/images/01_main/main_middle_hotellist.png" class="desc-more-btn">
                 </div>
-                <div class="" style="line-height: 1.5rem;text-align: center;font-size: 0.9rem; padding-top: 10px; border-top: 1px solid black;">
+                <div class="desc-body">
                   진정한 휴식과 감성적 재충전을 모두 충족시키기 위한 부티크 호텔이다.
                   라이프 스타일을 중요 시 하는 트랜디한 고객들에게는 이미 필수 호텔로
                   자리 잡은 [HOUND HOTEL]은 도심속에서 자연의 힐링과 감각적 재 충전을 위한
@@ -371,16 +434,16 @@
           </div>
 
           <div class="main7-list">
-              <div class="" style="display:flex;">
-                <img style="margin: 30px auto;" src="../../public/client/images/01_main/main_25.png" alt="">
+              <div class="main7-list-image">
+                <img src="../../public/client/images/01_main/main_25.png" class="main7-logo">
               </div>
 
-              <div class="list-desc-wrapper">
-                <div style="text-align:center;"> 하 운 드 호텔 </div>
-                <div class="" style="display:flex; padding-bottom: 10px;">
-                  <img style="margin: auto;" src="../../public/client/images/01_main/main_middle_hotellist.png" alt="">
+              <div class="desc-wrapper">
+                <div class="desc-title"> 하운드 호텔 </div>
+                <div class="desc-more-btn-container">
+                  <img src="../../public/client/images/01_main/main_middle_hotellist.png" class="desc-more-btn">
                 </div>
-                <div class="" style="line-height: 1.5rem;text-align: center;font-size: 0.9rem; padding-top: 10px; border-top: 1px solid black;">
+                <div class="desc-body">
                   진정한 휴식과 감성적 재충전을 모두 충족시키기 위한 부티크 호텔이다.
                   라이프 스타일을 중요 시 하는 트랜디한 고객들에게는 이미 필수 호텔로
                   자리 잡은 [HOUND HOTEL]은 도심속에서 자연의 힐링과 감각적 재 충전을 위한
@@ -390,16 +453,16 @@
           </div>
 
           <div class="main7-list">
-              <div class="" style="display:flex;">
-                <img style="margin: 30px auto;" src="../../public/client/images/01_main/main_25.png" alt="">
+              <div class="main7-list-image">
+                <img src="../../public/client/images/01_main/main_25.png" class="main7-logo">
               </div>
 
-              <div class="list-desc-wrapper">
-                <div style="text-align:center;"> 하 운 드 호텔 </div>
-                <div class="" style="display:flex; padding-bottom: 10px;">
-                  <img style="margin: auto;" src="../../public/client/images/01_main/main_middle_hotellist.png" alt="">
+              <div class="desc-wrapper">
+                <div class="desc-title"> 하운드 호텔 </div>
+                <div class="desc-more-btn-container">
+                  <img src="../../public/client/images/01_main/main_middle_hotellist.png" class="desc-more-btn">
                 </div>
-                <div class="" style="line-height: 1.5rem;text-align: center;font-size: 0.9rem; padding-top: 10px; border-top: 1px solid black;">
+                <div class="desc-body">
                   진정한 휴식과 감성적 재충전을 모두 충족시키기 위한 부티크 호텔이다.
                   라이프 스타일을 중요 시 하는 트랜디한 고객들에게는 이미 필수 호텔로
                   자리 잡은 [HOUND HOTEL]은 도심속에서 자연의 힐링과 감각적 재 충전을 위한
@@ -415,33 +478,33 @@
 
     <div class="footer">
       <div class="footer-wrapper">
-        <div class="" style="display:flex; align-items: center;">
-          <img style="width:100%;" src="../../public/client/images/01_main/main_botton_logo.png" class="">
+        <div class="footer-logo">
+          <img src="../../public/client/images/01_main/main_botton_logo.png" class="footer-logo-img">
         </div>
-        <div class="">
-          <div class="">
-            호텔 프렌차이즈 사업문의
+        <div class="footer-content">
+          <div class="footer-content-title">
+            &nbsp;호텔 프렌차이즈 사업문의
           </div>
-          <div class="">
-            1877-1318
+          <div class="footer-content-contact">
+            1877-1318 &nbsp;
             <span> <img src="../../public/client/images/01_main/main_icon_blog.png" class=""> </span>
             <span> <img src="../../public/client/images/01_main/main_icon_face.png" class=""> </span>
             <span> <img src="../../public/client/images/01_main/main_icon_insta.png" class=""> </span>
             <span> <img src="../../public/client/images/01_main/main_icon_map.png" class=""> </span>
           </div>
 
-          <div class="">
+          <div class="footer-content-company-info">
             대표자: 이승훈 사업장 소재지: 부산광역시 해운대구 우동 1410 트럼프월드마린 D동 상가 2F 208, 209호 사업자 등록번호: 823-86-00673<br>
             개인정보관리책임자: 이승훈 팩스번호: 051-921-0051 프렌차이즈 사업 문의: 1877-1318 평일 10:00~19:00 (토/일/공휴일휴무)<br>
             이메일: lsr@wnthotels.com official web: www.wnh.co.kr
           </div>
         </div>
-        <div class="">
-          <img style="width:100%;" src="../../public/client/images/01_main/main_tab_number.png" class="">
-          <div class="">
-            서비스 이용약관 보기
+        <div class="footer-extra">
+          <img src="../../public/client/images/01_main/main_tab_number.png" class="footer-extra-contact-btn">
+          <div class="footer-extra-service">
+            <span style="cursor:pointer;">서비스 이용약관 보기</span>
             <br>
-            개인정보 처리 약관 보기
+            <span style="cursor:pointer;">개인정보 처리 약관 보기</span>
           </div>
         </div>
       </div>
