--- a/views/client/main.html
+++ b/views/client/main.html
@@ -29,6 +29,8 @@
           </span>
         </div>
         <div class='gnb-navbar'>
+          <span class="my_page">강병욱님 / MY PAGE</span>
+          <span class="my_point">포인트 3,000P</span>
           <span> 호텔정보 </span>
           <span> 공지사항 </span>
           <span> 이벤트 </span>
